tests/skipjob/access-policy-job/02-delete-job.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: minimal-application
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: SKIPJob
    name: access-policy-job
