tests/skipjob/access-policy-job/app-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-with-istio
  labels:
    istio.io/rev: asm-stable
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: istio-application
  namespace: ns-with-istio
spec:
  image: image
  port: 8080
