tests/skipjob/access-policy-job/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: minimal-application
spec:
  image: image
  port: 8080
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: istio-application
  namespace: ns-with-istio-job
spec:
  image: image
  port: 8080
---
