tests/skipjob/access-policy-job/netpol-istio.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: istio-policy-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    accessPolicy:
      outbound:
        rules:
          - application: istio-application
            namespace: ns-with-istio
