tests/skipjob/access-policy-job/ns-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-with-istio
  labels:
    istio.io/rev: asm-stable
---
