tests/skipjob/access-policy-job/skipjob-cron.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: access-policy-cron-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    accessPolicy:
      outbound:
        rules:
          - application: minimal-application
        external:
          - host: example.com
            ports:
              - name: http
                port: 80
                protocol: HTTP
          - host: foo.com
  cron:
    schedule: "* * * * *"
