tests/skipjob/access-policy-job/00-assert.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: minimal-application
spec:
  image: image
  port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minimal-application
  name: minimal-application
spec:
  selector:
    app: minimal-application
