tests/skipjob/access-policy-job/skipjob-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy-job-skipjob
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
  labels:
    app.kubernetes.io/managed-by: skiperator
    skiperator.kartverket.no/controller: skipjob
    skiperator.kartverket.no/skipjob: 'true'
    skiperator.kartverket.no/skipjobName: access-policy-job
  ownerReferences:
    - apiVersion: skiperator.kartverket.no/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: SKIPJob
      name: access-policy-job
spec:
  egress:
    -  ports:
         - port: 8080
           protocol: TCP
       to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: access-policy-job-ns
          podSelector:
            matchLabels:
              app: minimal-application
  podSelector:
    matchLabels:
      app: access-policy-job-skipjob
  policyTypes:
    - Egress
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: skipjob-access-policy-job-egress-3a90cb5d70dc06a
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  hosts:
    - foo.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: skipjob-access-policy-job-egress-56cd7aa901014e78
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  hosts:
    - example.com
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: access-policy-job-skipjob
spec:
  egress:
    - hosts:
        - ./example.com
        - ./foo.com
        - access-policy-job-ns/minimal-application.access-policy-job-ns.svc.cluster.local
  outboundTrafficPolicy: {}
  workloadSelector:
    labels:
      app: access-policy-job-skipjob
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: access-policy-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    accessPolicy:
      outbound:
        external:
          - host: example.com
            ports:
              - name: http
                port: 80
                protocol: HTTP
          - host: foo.com
        rules:
          - application: minimal-application
status:
  accessPolicies: Ready
  conditions:
    - type: Failed
      status: "False"
    - type: Running
      status: "True"
    - type: Finished
      status: "False"
    - type: InternalRulesValid
      status: "True"
    - type: ExternalRulesValid
      status: "True"
