tests/skipjob/access-policy-job/skipjob-cron-assert.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: access-policy-cron-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    accessPolicy:
      outbound:
        external:
          - host: example.com
            ports:
              - name: http
                port: 80
                protocol: HTTP
          - host: foo.com
        rules:
          - application: minimal-application
  cron:
    schedule: "* * * * *"
status:
  accessPolicies: Ready
  conditions:
    - type: Ready
      status: "Unknown"
      reason: JobRunning
    - type: Failed
      status: "False"
    - type: Running
      status: "True"
    - type: Finished
      status: "False"
    - type: InternalRulesValid
      status: "True"
    - type: ExternalRulesValid
      status: "True"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy-cron-job-skipjob
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
  ownerReferences:
    - apiVersion: skiperator.kartverket.no/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: SKIPJob
      name: access-policy-cron-job
spec:
  egress:
    -  ports:
         - port: 8080
           protocol: TCP
       to:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: access-policy-job-ns
           podSelector:
             matchLabels:
               app: minimal-application
  podSelector:
    matchLabels:
      app: access-policy-cron-job-skipjob
  policyTypes:
    - Egress
---
