tests/skipjob/access-policy-job/skipjob-cron-error.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: access-policy-cron-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    accessPolicy:
      outbound:
        external:
          - host: example.com
            ports:
              - name: http
                port: 80
                protocol: HTTP
          - host: foo.com
        rules:
          - application: minimal-application
            ports:
              - port: 8080
                protocol: TCP
  cron:
    schedule: "* * * * *"
status:
  conditions:
    - type: Ready
      status: "Unknown"
      reason: JobRunning
    - type: Failed
      status: "False"
    - type: Running
      status: "True"
    - type: Finished
      status: "False"
    - type: InternalRulesValid
      status: "True"
    - type: ExternalRulesValid
      status: "True"
