tests/skipjob/access-policy-job/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: access-policy-job
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespace: access-policy-job-ns
  steps:
    - try:
        - apply:
            file: application.yaml
        - assert:
            file: application-assert.yaml
    - try:
        - apply:
            file: skipjob.yaml
        - assert:
            file: skipjob-assert.yaml
        - error:
            file: skipjob-error.yaml
    - try:
        - apply:
            file: skipjob-cron.yaml
        - assert:
            file: skipjob-cron-assert.yaml
        - error:
            file: skipjob-cron-error.yaml
    - try:
        - apply:
            file: ns-istio.yaml
        - apply:
            file: netpol-istio.yaml
        - assert:
            file: netpol-istio-assert.yaml
